0.4 (2011-07-22)
----------------

- Remove install-time dependency on pyramid_zcml.

- Add tox.ini for Jenkins testing.

- Pyramid 1.1 compatibility.

0.3 (2011-02-10)
----------------

- Basically didn't actually work, due to too much deferring of calling
  ``add_view``.

- Add an includeme and a way to do imperative configuration of a viewgroup;
  internal reshuffling.

0.2 (2011-01-18)
----------------

- Make compatible with Pyramid 1.0a10+.

0.1 (2010-11-08)
----------------

- Forked from repoze.bfg.viewgroup 0.3.