@@ -1,3 +1,8 @@
+Next release
+------------
+
+- Require pyramid_zcml 0.9.2 (for ``with_context``).
+
 0.4 (2011-07-22)
 ----------------
 
